Fix font size on smaller screen again.

--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,9 @@ p.more { font-size: 0.8em; margin-bottom: 1em; }
 	.boxholder { width: 33.333333333%; height: 300px; font-size: 1.5em; }
 	.moreinfo .panel li { width: 25%; }
 }
+@media only screen and (max-width: 1700px) {
+	.boxholder { font-size: 1em; }
+}
 @media only screen and (max-width: 1280px) {
 	.boxholder { width: 33.333333333%; }
 	.moreinfo .panel li { width: 25%; }
